tests/snapshots/selinger/q07.snap
---
source: tests/explain_snapshots.rs
description: "-- the same join spelled as a comma-join: P0 executes this as a literal\n-- cross product + filter. Feel the difference vs q06; that pain is P1.\nSELECT o_orderkey, l_partkey, l_quantity\nFROM orders, lineitem\nWHERE o_orderkey = l_orderkey AND l_quantity > 30"
expression: rendered
---
Project [#0.0, #1.1, #1.3]
  Join on=[#1.0 = #0.0]
    Filter (#1.3 > 30)
      Project [#1.0, #1.1, #1.3]
        Scan #1
    Project [#0.0]
      Scan #0
