tests/snapshots/selinger/q12.snap
---
source: tests/explain_snapshots.rs
description: "-- 3-way chain; the selective filter sits on the middle-listed table\nSELECT p_name, l_quantity, o_orderdate\nFROM lineitem, part, orders\nWHERE l_partkey = p_partkey\n  AND l_orderkey = o_orderkey\n  AND p_size = 41"
expression: rendered
---
Project [#1.1, #0.3, #2.4]
  Join on=[#0.0 = #2.0]
    Join on=[#1.0 = #0.1]
      Filter (#1.3 = 41)
        Project [#1.0, #1.1, #1.3]
          Scan #1
      Project [#0.0, #0.1, #0.3]
        Scan #0
    Project [#2.0, #2.4]
      Scan #2
